# prject_V2

./: .env  .env.example  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  riaClone.postman_collection.json
backand/: celerybeat-schedule
backand/apps/auth/: urls.py  views.py
backand/apps/cars/: models.py  serializers.py  urls.py  views.py
backand/apps/cars/choices/: brand_choices.py  currencies_choices.py
backand/apps/cars/migrations/: 0001_initial.py  0002_alter_carmodel_car_price_alter_carmodel_car_year.py  0003_alter_carmodel_car_price_alter_carmodel_car_year.py  0004_alter_carmodel_car_brand_alter_carmodel_car_model_and_more.py
backand/apps/currencies/: models.py  serializers.py
backand/apps/email_to_admin/: apps.py  urls.py  views.py
backand/apps/posts/: models.py  serializers.py  urls.py  views.py
backand/apps/posts/choices/: region_choices.py
backand/apps/posts/migrations/: 0001_initial.py  0002_alter_userpostsmodel_car.py  (+5 more)
backand/apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
backand/configs/: celery.py  settings.py  urls.py
backand/configs/extra_conf/: __init__.py  celery_conf.py  rest_conf.py
backand/core/: pagination.py  permissions.py  tasks.py
backand/core/enums/: action_token_enum.py  error_enum.py  regex_enum.py
backand/core/handlers/: error_handler.py
backand/core/services/: currencies_service.py  email_service.py  jwt_service.py  post_service.py
backand/templates/: base.html  email_to_admin.html  missing_car.html  recovery.html  register.html
frontend/: index.html
(+6 files in other folders)
